# pytorch_cmake_example

./: CMakeLists.txt  LICENSE  README.md  main.cu  test.py
